crates/pg_syntax/tests/snapshots/postgres_regress/sysviews@2.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select count(*) >= 0 as ok from pg_available_extensions;
---
SelectStmt@0..56
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..26
    AExpr@7..20
      FuncCall@7..14
        Ident@7..12 "count"
        Ascii40@12..13 "("
        Ascii42@13..14 "*"
      Ascii41@14..15 ")"
      Whitespace@15..16 " "
      GreaterEquals@16..18 ">="
      Whitespace@18..19 " "
      AConst@19..20
        Iconst@19..20 "0"
    Whitespace@20..21 " "
    As@21..23 "as"
    Whitespace@23..24 " "
    Ident@24..26 "ok"
  Whitespace@26..27 " "
  From@27..31 "from"
  Whitespace@31..32 " "
  RangeVar@32..55
    Ident@32..55 "pg_available_extensions"
  Ascii59@55..56 ";"

