crates/pg_syntax/tests/snapshots/postgres_regress/text@11.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select concat_ws('#',1,2,3,'hello',true, false, to_date('20100309','YYYYMMDD'));"
---
SelectStmt@0..80
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..77
    FuncCall@7..77
      Ident@7..16 "concat_ws"
      Ascii40@16..17 "("
      AConst@17..20
        Sconst@17..20 "'#'"
      Ascii44@20..21 ","
      AConst@21..22
        Iconst@21..22 "1"
      Ascii44@22..23 ","
      AConst@23..24
        Iconst@23..24 "2"
      Ascii44@24..25 ","
      AConst@25..26
        Iconst@25..26 "3"
      Ascii44@26..27 ","
      AConst@27..34
        Sconst@27..34 "'hello'"
      Ascii44@34..35 ","
      AConst@35..39
        TrueP@35..39 "true"
      Ascii44@39..40 ","
      Whitespace@40..41 " "
      AConst@41..46
        FalseP@41..46 "false"
      Ascii44@46..47 ","
      Whitespace@47..48 " "
      FuncCall@48..77
        Ident@48..55 "to_date"
        Ascii40@55..56 "("
        AConst@56..66
          Sconst@56..66 "'20100309'"
        Ascii44@66..67 ","
        AConst@67..77
          Sconst@67..77 "'YYYYMMDD'"
  Ascii41@77..78 ")"
  Ascii41@78..79 ")"
  Ascii59@79..80 ";"

