crates/pg_syntax/tests/snapshots/postgres_regress/text@12.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select concat_ws(',',10,20,null,30);"
---
SelectStmt@0..36
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..34
    FuncCall@7..34
      Ident@7..16 "concat_ws"
      Ascii40@16..17 "("
      AConst@17..20
        Sconst@17..20 "','"
      Ascii44@20..21 ","
      AConst@21..23
        Iconst@21..23 "10"
      Ascii44@23..24 ","
      AConst@24..26
        Iconst@24..26 "20"
      Ascii44@26..27 ","
      AConst@27..31
        NullP@27..31 "null"
      Ascii44@31..32 ","
      AConst@32..34
        Iconst@32..34 "30"
  Ascii41@34..35 ")"
  Ascii59@35..36 ";"

