crates/pg_syntax/tests/snapshots/postgres_regress/text@13.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select concat_ws('',10,20,null,30);"
---
SelectStmt@0..35
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..33
    FuncCall@7..33
      Ident@7..16 "concat_ws"
      Ascii40@16..17 "("
      AConst@17..19
        Sconst@17..19 "''"
      Ascii44@19..20 ","
      AConst@20..22
        Iconst@20..22 "10"
      Ascii44@22..23 ","
      AConst@23..25
        Iconst@23..25 "20"
      Ascii44@25..26 ","
      AConst@26..30
        NullP@26..30 "null"
      Ascii44@30..31 ","
      AConst@31..33
        Iconst@31..33 "30"
  Ascii41@33..34 ")"
  Ascii59@34..35 ";"

