crates/pg_syntax/tests/snapshots/postgres_regress/text@14.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select concat_ws(NULL,10,20,null,30) is null;"
---
SelectStmt@0..45
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..44
    NullTest@7..44
      FuncCall@7..35
        Ident@7..16 "concat_ws"
        Ascii40@16..17 "("
        AConst@17..21
          NullP@17..21 "NULL"
        Ascii44@21..22 ","
        AConst@22..24
          Iconst@22..24 "10"
        Ascii44@24..25 ","
        AConst@25..27
          Iconst@25..27 "20"
        Ascii44@27..28 ","
        AConst@28..32
          NullP@28..32 "null"
        Ascii44@32..33 ","
        AConst@33..35
          Iconst@33..35 "30"
      Ascii41@35..36 ")"
      Whitespace@36..37 " "
      Is@37..39 "is"
      Whitespace@39..40 " "
      NullP@40..44 "null"
  Ascii59@44..45 ";"

