crates/pg_syntax/tests/snapshots/postgres_regress/text@17.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select quote_literal('');"
---
SelectStmt@0..25
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..23
    FuncCall@7..23
      Ident@7..20 "quote_literal"
      Ascii40@20..21 "("
      AConst@21..23
        Sconst@21..23 "''"
  Ascii41@23..24 ")"
  Ascii59@24..25 ";"

