crates/pg_syntax/tests/snapshots/postgres_regress/text@18.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select quote_literal('abc''');"
---
SelectStmt@0..30
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..28
    FuncCall@7..28
      Ident@7..20 "quote_literal"
      Ascii40@20..21 "("
      AConst@21..28
        Sconst@21..28 "'abc'''"
  Ascii41@28..29 ")"
  Ascii59@29..30 ";"

