crates/pg_syntax/tests/snapshots/postgres_regress/text@19.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select quote_literal(e'\\\\');"
---
SelectStmt@0..28
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..26
    FuncCall@7..26
      Ident@7..20 "quote_literal"
      Ascii40@20..21 "("
      AConst@21..26
        Sconst@21..26 "e'\\\\'"
  Ascii41@26..27 ")"
  Ascii59@27..28 ";"

